Use Collectors.toList() in CollectionUtils#partition
Stream.toList() is not generic, so U in mapToObj() is inferred solely
from the lambda body as List<T>. That is not assignable to the declared
List<Collection<T>> return type:

  CollectionUtils.java:[30,40] incompatible types:
  java.util.List<java.util.List<T>> cannot be converted to
  java.util.List<java.util.Collection<T>>

Collectors.toList() is generic, which lets the target type propagate back
into mapToObj().